# RustX

./: .gitattributes  .gitignore  CHANGELOG.md  CODEBASE_STRUCTURE.md  CONTRIBUTING.md  Cargo.toml  GUIDE.md  INSTALL.md  LICENSE  QUICKREF.md  README.md  RELEASING.md  design.md  install.sh  recursion_test  run_all.sh  template_test  todo.md  verify_all.sh
.github/workflows/: ci.yml  release.yml
benchmarks/: LANG_COMPARISON.md  README.md  array_ops.rsx  compare.sh  compare_modes.sh  comparison_results.md  fib.js  fib.py  fib.rs  fib.rsx  fib_jit.rsx  fibonacci.rsx  json.lua  loop.js  loop.py  loop.rs  loop.rsx  loop_jit.rsx  loops.rsx  method_chaining.rsx  post.lua  run.sh  run_benchmarks.sh  string_ops.rsx
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  project_builder.rs
crates/core/: Cargo.toml
crates/core/src/: ast.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  token.rs  value.rs
crates/core/src/ast/: expr.rs  mod.rs  ops.rs  stmt.rs
crates/core/src/compiler/: transpiler.rs
crates/core/src/interpreter/: builtins.rs  environment.rs  error.rs  eval_expr.rs  eval_ops.rs  eval_stmt.rs  mod.rs
crates/core/src/lexer/: mod.rs  readers.rs  token.rs
crates/core/src/parser/: expr.rs  helpers.rs  mod.rs  stmt.rs
crates/core/src/stdlib/: fs.rs  http.rs  json.rs  mod.rs  os.rs  term.rs  time.rs  web.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/macros/tests/: context_capture_test.rs  integration_test.rs
debug/: debug_test.rsx
demo/: arithmetic.rsx  arithmetic_demo.rsx  basic.rsx  comprehensive.rsx  embed_demo.rs  greet_demo.rsx  main.rsx  simple_arith.rsx  simple_demo.rsx  working_comprehensive.rsx
docs/: README.md  built-in-functions.md  getting-started.md  language-reference.md
examples/: array_functions.rsx  basic.rsx  benchmark.rsx  builtins.rsx  compiler_demo_basic.rx  compiler_demo_functions.rx  fs_test.rsx  loops.rsx  loops_simple.rsx  method_chaining.rsx  recursion.rsx  rust_imports.rsx  stdlib_test.rsx  string_math.rsx  template_strings.rsx  term_test.rsx  test_use.rsx  web_config.rsx  web_server.rsx
examples/errors/: types.rsx
examples/imports/: cycle_a.rsx  cycle_b.rsx  diamond.rsx  left.rsx  lib.rsx  main.rsx  right.rsx  shared.rsx
src/: ast.rs  builtins.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  runtime.rs  transpiler.rs
src/ast/: mod.rs  node.rs  program.rs  types.rs
src/builtins/: mod.rs
src/compiler/: codegen.rs  mod.rs
src/error/: mod.rs
src/interpreter/: evaluator.rs  functions.rs  mod.rs  operations.rs  strings.rs
src/lexer/: lexer.rs  mod.rs  reader.rs  token.rs  utils.rs
src/parser/: expressions.rs  mod.rs  parser.rs  statements.rs  utils.rs
src/parser/statements/: control.rs  functions.rs  mod.rs  variables.rs
src/runtime/: environment.rs  mod.rs  value.rs
test/: hello.rsx  no_args_func.rsx  simple.rs  simple.rsx  simple_func.rsx  simple_greet.rsx  test_arith.rsx  test_complex.rsx  test_div.rsx  test_function.rsx  test_printf_div.rsx  test_printf_simple.rsx
tests/: jit_test.rsx  test_standalone.rsx
