[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/macros",
    "crates/cli",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["GrandpaEJx"]
license = "MIT"
repository = "https://github.com/GrandpaEJx/RustX"
homepage = "https://github.com/GrandpaEJx/RustX"
documentation = "https://github.com/GrandpaEJx/RustX/tree/main/docs"
description = "A clean, minimal scripting language that seamlessly integrates with Rust"
keywords = ["scripting", "language", "interpreter", "rust", "embedded"]
categories = ["development-tools", "parser-implementations"]
readme = "README.md"
