[package]
name = "rustx-lang" # Preserving the original project name for the binary
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
default-run = "rustx_lang"

[[bin]]
name = "rustx_lang"
path = "src/main.rs"

[dependencies]
rustx_core = { path = "../core" }
rustx_macros = { path = "../macros" }
clap = { version = "4.4", features = ["derive"] }
rustyline = "13.0"
colored = "2.1"
