[package]
name = "rustx-lang" # Preserving the original project name for the binary
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
default-run = "rustx"

[[bin]]
name = "rustx"
path = "src/main.rs"

[dependencies]
rustx_core = { version = "0.5.0", path = "../core" }
rustx_macros = { version = "0.5.0", path = "../macros" }
clap = { version = "4.4", features = ["derive"] }
rustyline = "13.0"
colored = "2.1"
